--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -15,8 +15,20 @@ services:
     volumes:
       - postgres-trackingcoin-data:/var/lib/postgresql/data
 
+  redis-trackingcoin:
+    image: redis:latest
+    container_name: redis-trackingcoin
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_db:/data
+    networks:
+      - my_network
+
+
 networks:
   my_network:
 
 volumes:
   postgres-trackingcoin-data:
+  redis_db:
