--- a/database/sqlc.yaml
+++ b/database/sqlc.yaml
@@ -1,10 +1,9 @@
 version: "2"
 sql:
-  - schema: "./database/schema"
-    queries: "./database/queries"
+  - schema: "./migration"
+    queries: "./queries"
     engine: "postgresql"
     gen:
       go:
-        package: "go-coin-tracking"
-        emit_json_tags: true
-        out: "./database/migration"
+        package: "database"
+        out: "./sqlc"
